--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.squareup.moshi:moshi:1.2.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 }
